--- a/templates/liste.html
+++ b/templates/liste.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8">
     <title>🛒 Liste de courses</title>
     <link rel="stylesheet" href="/static/style.css">
+    <style>
+        body {
+            background: url("/static/food.png") no-repeat center center fixed;
+            background-size: cover;
+        }
+
+        .container {
+            background-color: rgba(0, 0, 0, 0.8); /* assombri le fond pour lisibilité */
+            padding: 30px;
+            border-radius: 15px;
+            box-shadow: 0 0 25px rgba(0, 0, 0, 0.6);
+        }
+    </style>
 </head>
 <body>
     <div class="container">
