--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Formulaire en 3 volets</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+
     <style>
         .step {
             display: none;
