--- a/templates/coach.html
+++ b/templates/coach.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Coach IA</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <div class="container">
