--- a/templates/planning.html
+++ b/templates/planning.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Planning nutritionnel IA</title>
     <link rel="stylesheet" href="/static/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Code&display=swap" rel="stylesheet">
+
     <style>
         body {
             background: url("/static/food.png") no-repeat center center fixed;
