fix: amélioration lisibilité liste de courses + dernières modifs

--- a/templates/liste.html
+++ b/templates/liste.html
@@ -26,16 +26,16 @@
 </head>
 <body>
     <div class="container">
-        <h1>🛒 Liste de courses hebdomadaire</h1>
-        <p>Voici la liste complète d’ingrédients, générée automatiquement à partir de ton planning personnalisé :</p>
+        <h1> Voici ta liste de course adaptée au planning de cette semaine !</h1>
+        
 
         <div class="bloc">
             <pre class="liste-content">{{ liste }}</pre>
         </div>
 
         <div class="button-group">
-            <a href="/accueil" class="button">🏠 Retour à l’accueil</a>
-            <a href="/planning" class="button secondary">📅 Voir le planning</a>
+            <a href="/accueil" class="button"> Retour à l’accueil</a>
+            <a href="/planning" class="button secondary"> Voir le planning</a>
         </div>
     </div>
 </body>
