--- a/templates/index.html
+++ b/templates/index.html
@@ -23,9 +23,12 @@
         }
 
         .logo img {
-            max-width: 350px;
-            filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.2));
-        }
+    max-width: 600px;
+    width: 100%;
+    height: auto;
+    filter: drop-shadow(0 0 10px rgba(255, 255, 255, 0.2));
+}
+
 
         .grid {
             display: grid;
