fix: affichage HTML interprété pour rendre les liens cliquables dans training

--- a/templates/training.html
+++ b/templates/training.html
@@ -64,7 +64,7 @@
     <div class="container">
         <h1>Ton programme d'entraînement personnalisé 🏋️</h1>
         <div class="training-content">
-            <pre>{{ training }}</pre>
+            <div>{{ training | safe }}</div>
         </div>
         <a href="/accueil" class="button">Retour à l'accueil</a>
     </div>
