feat: prise en compte des jours cochés pour le planning d'entraînement

--- a/templates/formulaire.html
+++ b/templates/formulaire.html
@@ -178,7 +178,7 @@
     <input type="text" name="precision" placeholder="Ex : travaille de nuit, douleurs chroniques..."><br>
 
     <h3>Quels jours peux-tu faire du sport ?</h3>
-<div class="checkbox-group">
+    <div class="checkbox-group">
     <label><input type="checkbox" name="jours_sport" value="Lundi"> Lundi</label>
     <label><input type="checkbox" name="jours_sport" value="Mardi"> Mardi</label>
     <label><input type="checkbox" name="jours_sport" value="Mercredi"> Mercredi</label>
@@ -186,6 +186,8 @@
     <label><input type="checkbox" name="jours_sport" value="Vendredi"> Vendredi</label>
     <label><input type="checkbox" name="jours_sport" value="Samedi"> Samedi</label>
     <label><input type="checkbox" name="jours_sport" value="Dimanche"> Dimanche</label>
+    </div>
+
 </div>
 
         <!-- Étape 4 -->
